@@ -7,7 +7,6 @@ import jasper.domain.Ref_;
 import jasper.errors.NotFoundException;
 import jasper.repository.RefRepository;
 import jasper.repository.filter.RefFilter;
-import jasper.service.TaggingService;
 import jasper.service.dto.RefDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -21,18 +20,23 @@ import org.springframework.stereotype.Component;
 import javax.annotation.PostConstruct;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static jasper.domain.proj.HasOrigin.origin;
 import static jasper.domain.proj.HasTags.hasMatchingTag;
+import static org.apache.commons.lang3.StringUtils.isBlank;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.springframework.data.domain.Sort.by;
 
 /**
- * An async service runs by querying a tag, and is marked as completed with the protected version of
- * the same tag. If the tag is also a seal it will be removed on edit.
+ * An async service runs on Refs by querying a tag.
+ * The Ref is considered completed if either:
+ * 1. The tag is removed.
+ * 2. A signature tag is added.
+ * 3. A signature tag is added via plugin response.
+ * If either tag is also a seal it will be removed on edit.
  */
 @Component
 public class Async {
@@ -48,13 +52,9 @@ public class Async {
 	RefRepository refRepository;
 
 	@Autowired
-	TaggingService taggingService;
-
-	@Autowired
 	ConfigCache configs;
 
-	Map<String, AsyncWatcher> tags = new HashMap<>();
-	Map<String, AsyncWatcher> responses = new HashMap<>();
+	Map<String, AsyncRunner> tags = new HashMap<>();
 
 	@PostConstruct
 	public void init() {
@@ -68,24 +68,20 @@ public class Async {
 	/**
 	 * Register a runner for a tag.
 	 */
-	public void addAsyncTag(String plugin, AsyncWatcher r) {
+	public void addAsyncTag(String plugin, AsyncRunner r) {
 		tags.put(plugin, r);
 	}
 
 	/**
-	 * Register a runner for a tag response.
-	 */
-	public void addAsyncResponse(String plugin, AsyncWatcher r) {
-		responses.put(plugin, r);
-	}
-
-	/**
-	 * The tracking query the plugin tag but not the protected version.
+	 * The tracking query for uncompleted Refs, or Refs which may be completed
+	 * by a response Plugin.
 	 */
 	String trackingQuery() {
-		var plugins = new ArrayList<>(Arrays.asList(tags.keySet().stream().map(p -> p + ":!+" + p).toArray(String[]::new)));
-		plugins.addAll(responses.keySet());
-		return String.join("|", plugins);
+		return tags
+			.entrySet()
+			.stream()
+			.map(e -> e.getKey() + (isBlank(e.getValue().signature()) ? "" : ":!" + e.getValue().signature()))
+			.collect(Collectors.joining("|"));
 	}
 
 	@ServiceActivator(inputChannel = "refRxChannel")
@@ -96,9 +92,13 @@ public class Async {
 		if (ud.getTags() == null) return;
 		if (!root.getAsyncOrigins().contains(origin(ud.getOrigin()))) return;
 		tags.forEach((k, v) -> {
+			if (hasMatchingTag(ud, v.signature())) return;
 			if (!hasMatchingTag(ud, k)) return;
-			if (v instanceof AsyncRunner r) {
-				taggingService.create(ud.getUrl(), ud.getOrigin(), r.signature());
+			if (isNotBlank(v.signature())) {
+				var ref = refRepository.findOneByUrlAndOrigin(ud.getUrl(), ud.getOrigin())
+					.orElse(null);
+				// TODO: Only check plugin responses in the same origin
+				if (ref != null && ref.hasPluginResponse(v.signature())) return;
 			}
 			logger.debug("Async Tag ({}): {} {}", k, ud.getUrl(), ud.getOrigin());
 			try {
@@ -107,22 +107,6 @@ public class Async {
 				logger.debug("Plugin not installed {} ", e.getMessage());
 			} catch (Exception e) {
 				logger.error("Error in async tag {} ", k, e);
-			}
-		});
-		responses.forEach((k, v) -> {
-			if (!hasMatchingTag(ud, k)) return;
-			if (v instanceof AsyncRunner r) {
-				var ref = refRepository.findOneByUrlAndOrigin(ud.getUrl(), ud.getOrigin())
-					.orElse(null);
-				if (ref != null && ref.hasPluginResponse(r.signature())) return;
-			}
-			logger.debug("Async Response Tag ({}): {} {}", k, ud.getUrl(), ud.getOrigin());
-			try {
-				v.run(fetch(ud));
-			} catch (NotFoundException e) {
-				logger.debug("Plugin not installed {} ", e.getMessage());
-			} catch (Exception e) {
-				logger.error("Error in async tag response {} ", k, e);
 			}
 		});
 	}
@@ -141,13 +125,13 @@ public class Async {
 				.modifiedAfter(lastModified.getOrDefault(origin, Instant.now().minus(1, ChronoUnit.DAYS)))
 				.build().spec(), PageRequest.of(0, 1, by(Ref_.MODIFIED)));
 			if (maybeRef.isEmpty()) return;
-			var ref = maybeRef.getContent().get(0);
+			var ref = maybeRef.getContent().getFirst();
 			lastModified.put(origin, ref.getModified());
 			tags.forEach((k, v) -> {
-				if (!ref.getTags().contains(k)) return;
-				if (v instanceof AsyncRunner r) {
-					taggingService.create(ref.getUrl(), ref.getOrigin(), r.signature());
-				}
+				if (!v.backfill()) return;
+				if (!hasMatchingTag(ref, k)) return;
+				// TODO: Only check plugin responses in the same origin
+				if (isNotBlank(v.signature()) && ref.hasPluginResponse(v.signature())) return;
 				try {
 					v.run(ref);
 				} catch (NotFoundException e) {
@@ -156,27 +140,23 @@ public class Async {
 					logger.error("Error in async tag {} ", k, e);
 				}
 			});
-			responses.forEach((k, v) -> {
-				if (!ref.getTags().contains(k)) return;
-				if (v instanceof AsyncRunner r) {
-					if (ref.hasPluginResponse(r.signature())) return;
-				}
-				try {
-					v.run(ref);
-				} catch (NotFoundException e) {
-					logger.debug("Plugin not installed {} ", e.getMessage());
-				} catch (Exception e) {
-					logger.error("Error in async tag response {} ", k, e);
-				}
-			});
 		}
 	}
 
-	public interface AsyncWatcher {
+	public interface AsyncRunner {
 		void run(Ref ref) throws Exception;
-	}
-
-	public interface AsyncRunner extends AsyncWatcher {
-		String signature();
+		/**
+		 * Mark this Ref as completed with this signature on the Ref itself
+		 * or as a Plugin response.
+		 */
+		default String signature() {
+			return null;
+		}
+		/**
+		 * Check for uncompleted Refs on server restart.
+		 */
+		default boolean backfill() {
+			return true;
+		}
 	}
 }
